--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,23 +1,34 @@
-<h2>Sign up</h2>
+<div id="wrapper">
+  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {name: 'login-form', class: 'login-form'}) do |f| %>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
 
-    <% binding.pry %>
 
-  <div><%= f.label :name %><br />
-  <%= f.text_field :name %></div>
+      <div class="header">
+        <h1>Registration Form</h1>
+        <%= devise_error_messages! %>
+        <span>Please fill this text fields</span>
+      </div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+      <div class="content">
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+        <%= f.text_field :name, :autofocus => true, class: 'input name', placeholder: 'Name'%>
+        <%= f.text_field :email, class: 'input email', placeholder: 'Email' %>
+        <%= f.password_field :password, class: 'input', placeholder: 'Password'%>
+        <%= f.password_field :password_confirmation, class: 'input', placeholder: 'Password Confirm'%>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+      </div>
+        <div class="footer">
+          <div><%= f.submit 'Sign up', class: 'button' %></div>
+          <%= link_to new_user_session_path do %>
+              <input type="button" value="Back" class="register" />
+          <% end %>
 
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
+        </div>
 
-<%= render "devise/shared/links" %>
+
+  <% end %>
+
+
+  <div class="gradient"></div>
+
+</div>
